fix: resolved layout shift due to Toastify and unnecessary section height

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,7 +4,7 @@
     padding: 30px;
     text-align: center;
     font-size: 18px;
-    /* margin-top: 50px; */
+    margin-top: 50px;
     border-top: 1px solid #ffffff1a;
 
   }
